# bashdoc

./: .clog.toml  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  _  bashdocrc.toml  blank.rs  cli.yml  example.sh  test.sh
example/: zshrc  zshrc.html  zshrc.json
src/: doc_structure.rs  docs.rs  main.rs
static/: script.js  styles.css  template.hbs
