[package]
name = "bashdoc"
version = "0.4.6"
authors = ["Dustin Knopoff <dustinknopoff@gmail.com>"]
description = """
A tool for generating documentation/help menu for user defined bash functions.
"""
edition = "2018"
homepage = "https://github.com/dustinknopoff/bashdoc"
repository = "https://github.com/dustinknopoff/bashdoc"
readme = "README.md"
keywords = ["bash", "docs", "documentation"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT"
exclude = ["example/**", ".idea/**", "backdocrc.toml"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
colored = "1.6"
dirs = "1.0.4"
clap = {version = "2.32", features = ["yaml"]}
glob = "0.2"
rayon = "1.0.3"
serde_derive = "1.0.82"
serde = "1.0.82"
serde_json = "1.0.33"
toml = "0.4.10"
nom = "4.1.1"
handlebars = "1.1.0"
notify = "4.0.6"
nom_locate = "0.3.1"